--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             try {
                 // ارسال درخواست به سرور ربات (Backend)
-                const response = await fetch("https://YOUR-BOT-SERVER.com/send-message", {
+                const response = await fetch("https://artadante.github.io/test/", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ chat_id: chatId })
