--- a/index.html
+++ b/index.html
@@ -2,63 +2,38 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ارسال پیام از ربات</title>
+    <title>Telegram WebApp</title>
     <style>
-        body {
-            font-family: Tahoma;
-            text-align: center;
-            padding: 20px;
-            background: #f5f5f5;
-        }
-        button {
-            background: #0088cc;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 20px;
-        }
+        body { font-family: Arial; text-align: center; padding: 20px; }
+        button { background: #0088cc; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
-    <h1>برای دریافت پیام کلیک کنید!</h1>
-    <button onclick="sendMessage()">✉️ دریافت پیام از ربات</button>
+    <h1>سلام! به وب‌اپ من خوش آمدید</h1>
+    <button onclick="sendMessage()">ارسال پیام به ربات</button>
 
     <script>
-        // ارتباط با تلگرام
-        const tg = window.Telegram.WebApp;
-
-        async function sendMessage() {
-            const chatId = tg.initDataUnsafe.user?.id; // دریافت chat_id کاربر
+        function sendMessage() {
+            const tg = window.Telegram.WebApp;
+            const chatId = tg.initDataUnsafe.user?.id;
             
             if (!chatId) {
                 alert("خطا: کاربر شناسایی نشد!");
                 return;
             }
 
-            try {
-                // ارسال درخواست به سرور ربات (Backend)
-                const response = await fetch("https://artadante.github.io/test/", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ chat_id: chatId })
-                });
-
-                if (response.ok) {
-                    alert("پیام با موفقیت ارسال شد! به چت با ربات مراجعه کنید.");
-                } else {
-                    alert("خطا در ارسال پیام!");
-                }
-            } catch (error) {
-                alert("خطا در ارتباط با سرور!");
-            }
+            fetch('http://localhost:5000/main.html', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ chat_id: chatId })
+            })
+            .then(response => response.json())
+            .then(data => alert(data.message))
+            .catch(error => alert("خطا: " + error));
         }
 
-        tg.expand(); // بزرگ‌نمایی وب‌اپ
-        tg.ready(); // آماده‌سازی
+        Telegram.WebApp.expand();
+        Telegram.WebApp.ready();
     </script>
 </body>
 </html>
